Simplify spectrum orientation handling: Let the user only pick between landscape and portrait (the exact meaning still needs to be communicated) with a fixed alignment in regard to the phone's case. This also fixes the crash when the device is rotated.